# Trident

./: .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: Conversions.hpp  lib.cpp  lib.hpp  main.cpp
source/Engine/: HelperFunctions.hpp  TypeConfiguration.hpp  Typelist.hpp
source/Engine/Body/: Body.hpp
source/Engine/Collider/: Collider.cpp  Collider.hpp
source/Engine/Collision/: NarrowPhase.hpp
source/Engine/Geometry/: Shapes.cpp  Shapes.hpp
source/Engine/Physics/: RigidBody.hpp
source/Graphics/: Arrow.cpp  Arrow.hpp
source/Maths/: LinAlg.hpp
test/: CMakeLists.txt
test/source/: Trident_test.cpp
